--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=polishinvoicing.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=220055438088
 VITE_FIREBASE_APP_ID=1:20055438088:web:2cb89642d1b88f5a0772bd
 VITE_FIREBASE_MEASUREMENT_ID=G-9DGH6ZY4SL
+dummy=variable
