--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@types/node-forge": "^1.3.13",
+    "asn1js": "^3.0.6",
     "axios": "^1.11.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "node-forge": "^1.3.1",
+    "pkijs": "^3.2.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "xadesjs": "^2.4.4",
+    "xmldsigjs": "^2.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
